centered the content

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,13 @@ body {
   color: var(--colorText);
 }
 
+.container {
+  max-width: 1250px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 /* ================header================= */
 
 .button-acction {
