--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,8 +11,8 @@
   --сolorBgBrands: rgba(44, 53, 61, 0.2);
   --colorBgHover: rgba(40, 48, 54, 0.6);
   --colorBg: #1e252b;
+  --colorBgInput: #283036;
   /* =====================bg========================== */
-
   --colorTextHover: #fdf5ff;
   --colorHover: #ff6e30;
   /* ==================hover===================== */
@@ -37,6 +37,38 @@ body {
 
 /* ================header================= */
 
+.header {
+  padding-top: 26px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.logo {
+  display: flex;
+}
+
+.menu-list {
+  display: flex;
+  align-items: center;
+  column-gap: 40px;
+}
+
+.list-item:nth-child(2)::after {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin-left: 4px;
+  background-image: url(../img/icon/arrow_down.svg);
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: no-repeat;
+}
+
 .button-acction {
   padding: 18px 24px;
   color: var(--secondColorText);
@@ -52,9 +84,25 @@ body {
 
 /* =============main================ */
 
+.hero {
+  background-image: url(../img/main/hero-illustration.webp);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.hero-info {
+  max-width: 600px;
+}
+
 .hero-title {
+  padding-top: 104px;
   font-size: 50px;
   line-height: 1.4;
+  margin-bottom: 30px;
+}
+
+.hero-dot {
+  color: var(--colorHover);
 }
 
 .hero-text {
@@ -62,13 +110,37 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.67;
+  margin-bottom: 60px;
+}
+
+.hero-form {
+  background-color: var(--colorBgInput);
+  border-radius: 15px;
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 110px;
 }
 
 .form-input {
   color: var(--colorTextForm);
+  width: 227px;
   font-weight: 400;
   font-size: 14px;
   background-color: var(--colorButton);
+  padding: 20px 0px 20px 18px;
+}
+
+.form-input::before {
+  content: "";
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  margin-left: 4px;
+  background-image: url(../img/icon/search.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .form-button {
@@ -77,6 +149,13 @@ body {
   padding: 12px 36px;
   border-radius: 8px;
   font-weight: 600;
+  margin-right: 11px;
+}
+
+.webnetwork {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
 }
 
 /* =====================tools======================= */
@@ -161,6 +240,10 @@ body {
 
 /* ====================apps======================= */
 
+.newcomer {
+  margin-bottom: 200px;
+}
+
 .app-name {
   color: var(--secondColorText);
   font-size: 24px;
@@ -193,6 +276,38 @@ body {
 
 /* =====================teammate======================= */
 
+.teammate-container {
+  max-width: 850px;
+  margin-bottom: 250px;
+}
+
+.teammate-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.teammate-card {
+  display: inline-block;
+  border: 1px solid var(--colorBgInput);
+  border-radius: 8px;
+  position: relative;
+  top: 460px;
+  left: 160px;
+  backdrop-filter: blur(50px);
+  background-color: rgba(40, 48, 54, 0.2);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+.teammate-name {
+  padding: 10px 22px 0px 23px;
+  margin-bottom: 2px;
+}
+
+.teammate-role {
+  padding-left: 23px;
+  padding-bottom: 16px;
+}
+
 .teammate-name {
   color: var(--secondColorText);
   font-size: 26px;
@@ -204,6 +319,11 @@ body {
   font-weight: 400;
 }
 
+.teammate-photo {
+  width: 400px;
+  height: 490px;
+}
+
 .teammate-text {
   color: var(--thirdColorText);
   font-family: var(--secondFamily);
@@ -213,12 +333,28 @@ body {
   letter-spacing: 0.01em;
 }
 
+.about-teammate {
+  display: flex;
+  width: 400px;
+  padding-top: 50px;
+  padding-left: 50px;
+  background-image: url(../img/icon/“.svg);
+  background-repeat: no-repeat;
+  background-position: top left;
+}
+
 /* =====================join======================= */
+
+.join-container {
+  max-width: 555px;
+  margin-bottom: 240px;
+}
 
 .join-title {
   font-size: 48px;
   line-height: 1.3;
   text-align: center;
+  margin-bottom: 25px;
 }
 
 .join-text {
@@ -226,6 +362,16 @@ body {
   font-size: 18px;
   line-height: 1.67;
   text-align: center;
+  margin-bottom: 100px;
+}
+
+.join-form {
+  max-width: 550px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--colorBgInput);
+  border-radius: 15px;
 }
 
 .join-input {
@@ -233,6 +379,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   background-color: var(--colorButton);
+  padding: 22px 0px 21px 24px;
 }
 
 .join-button {
@@ -241,6 +388,7 @@ body {
   padding: 12px 36px;
   background-color: var(--colorHover);
   border-radius: 8px;
+  margin-right: 12px;
 }
 
 /* ===========================footer======================= */
