--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,6 +88,7 @@ body {
   background-image: url(../img/main/hero-illustration.webp);
   background-repeat: no-repeat;
   background-position: right;
+  margin-bottom: 195px;
 }
 
 .hero-info {
@@ -164,6 +165,8 @@ body {
   font-size: 48px;
   line-height: 1.3;
   text-align: center;
+  margin-bottom: 25px;
+  padding-top: 33px;
 }
 
 .tools-subtitle {
@@ -171,23 +174,48 @@ body {
   font-size: 18px;
   line-height: 1.67;
   text-align: center;
+  margin: 0px auto 90px auto;
+  width: 430px;
+}
+
+.tools-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 25px;
+  row-gap: 100px;
+}
+
+.tools-card {
+  width: 390px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 30px;
 }
 
 .tool-name {
   color: var(--secondColorText);
   font-size: 24px;
+  margin-bottom: 3px;
 }
 
 .tool-availability {
   color: var(--colorAvailability);
   font-weight: 400;
   font-size: 18px;
+  margin-bottom: 30px;
 }
 
 .tool-text {
   color: var(--thirdColorText);
   font-weight: 400;
   line-height: 1.87;
+  margin-bottom: 30px;
+}
+
+.tool-card-acction {
+  padding-bottom: 33px;
 }
 
 .tool-link {
