--- a/src/css/style.css
+++ b/src/css/style.css
@@ -184,14 +184,23 @@ body {
   justify-content: center;
   align-items: center;
   column-gap: 25px;
-  row-gap: 100px;
 }
 
 .tools-card {
-  width: 390px;
+  max-width: 390px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 30px;
+  margin-bottom: 100px;
+  border-radius: 15px;
+  padding: 33px;
+}
+
+.tools-card:hover {
+  transform: translate(0px, -20px);
+  transition: transform 0.35s ease-in;
+  backdrop-filter: blur(50px);
+  background: rgba(40, 48, 54, 0.6);
 }
 
 .tool-name {
@@ -230,6 +239,11 @@ body {
   background-color: var(--colorHover);
 }
 
+.tools-button {
+  margin-bottom: 200px;
+  text-align: center;
+}
+
 .tools-link {
   color: var(--colorHover);
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -240,22 +254,74 @@ body {
 
 /* =====================brands======================= */
 
+.brands-container {
+  margin-bottom: 200px;
+}
+
+.brands-container {
+  backdrop-filter: blur(50px);
+  background-color: rgba(44, 53, 61, 0.2);
+  border-radius: 25px;
+  background-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(255, 72, 66, 0.4) 0%,
+    rgba(0, 0, 0, 0) 20%
+  );
+}
+
 .brands-title {
   color: var(--colorTextBrands);
   font-size: 24px;
+  padding-top: 55px;
+  margin-bottom: 55px;
+  text-align: center;
 }
 
-/* =====================info======================= */
+.brands-photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 107px;
+  padding-bottom: 56px;
+}
+
+/* =====================newcomer======================= */
+
+.newcomer-container {
+  display: flex;
+  justify-content: center;
+}
+
+.newcomer {
+  margin-bottom: 200px;
+}
+
+.newcomer-info {
+  width: 430px;
+  margin-right: 200px;
+}
+
+.newcomer-apps {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 24px;
+  row-gap: 42px;
+}
 
 .info-title {
   font-size: 48px;
   line-height: 1.3;
+  margin-bottom: 30px;
 }
 
 .info-text {
   color: var(--thirdColorText);
   font-size: 18px;
   line-height: 1.67;
+  margin-bottom: 60px;
 }
 
 .info-button {
@@ -266,21 +332,30 @@ body {
   border-radius: 8px;
 }
 
-/* ====================apps======================= */
-
-.newcomer {
-  margin-bottom: 200px;
+.apps-card {
+  max-width: 290px;
+  border-radius: 15px;
+  padding: 28px 22px 28px 21px;
+  transition: transform 0.35s ease-in;
 }
 
 .app-name {
   color: var(--secondColorText);
   font-size: 24px;
+  margin-bottom: 3px;
+}
+
+.apps-card:hover {
+  backdrop-filter: blur(50px);
+  background: rgba(40, 48, 54, 0.6);
+  transform: translate(0px, -18px);
 }
 
 .app-availability {
   color: var(--colorAvailability);
   font-weight: 400;
   font-size: 18px;
+  margin-bottom: 30px;
 }
 
 .app-text {
@@ -288,6 +363,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 2.14;
+  margin-bottom: 30px;
 }
 
 .app-link {
