--- a/src/css/style.css
+++ b/src/css/style.css
@@ -265,7 +265,7 @@ body {
   padding: 7px;
 }
 
-.tool-checkbox:nth-child(2) {
+.tool-acction:nth-child(2) .tool-checkbox {
   background-image: url(../img/icon/add.svg);
   padding: 6px;
 }
@@ -462,7 +462,7 @@ body {
   padding: 7px;
 }
 
-.app-checkbox:nth-child(2) {
+.app-label:nth-child(2) .app-checkbox {
   background-image: url(../img/icon/add.svg);
 }
 
